[tool.poetry]
name = "swirl"
version = "0.1.0"
description = "A simple cli to create mathematical visualizations in an artistic style."
authors = ["brad90four <42116429+brad90four@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.287"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
